@@ -37,6 +37,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'org.postgresql:postgresql'
 
+    // Validation (@Valid, @NotNull, @NotBlank)
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
@@ -67,4 +70,5 @@ dependencyLocking {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('-XX:+EnableDynamicAgentLoading')
 }
